# updater

./: CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  GEMINI.md  README.md  SECURITY.md  SIGNPATH.md  launcher_settings.json  manifest.json  version.json
bootstrap/: updater_bootstrap.cpp
docs/milestones/: M1_MultiClient_Architecture.md  M2_InstallationPathSelection.md  M3_RunAction.md  M4_AutoUpdateCheckBeforeRun.md  M5_UpdateCheckOnLauncherStart.md  M6_HiddenAdvancedOptions.md  M7_LanguageSwitching.md  M8_FileExceptionList.md  M9_FinalSystemValidation.md
languages/: en.json  es.json  pt.json  ru.json
resources/: launcher.rc  launcher.rc.in
src/: config.cpp  config.h  crypto_utils.cpp  crypto_utils.h  downloader.cpp  downloader.h  extractor.cpp  extractor.h  language.cpp  language.h  launcher_utils.cpp  launcher_utils.h  main.cpp  manifest.cpp  manifest.h  texture_utils.cpp  texture_utils.h  ui.cpp  ui.h  updater.cpp  updater.h  utils.cpp  utils.h
tools/: deploy_launcher.bat  deploy_launcher.sh  deploy_tool.py  encrypt_settings.py  generate_manifest.py  package_release.ps1  settings_viewer.py
